# lib/api-spec/openapi.yaml
@@ -1201,7 +1201,7 @@ components:
           type: string
         role:
           type: string
-          enum: [super_admin, club_admin, coach, athlete, parent]
+          enum: [super_admin, club_admin, coach, athlete, parent, pending]
 
     Club:
       type: object
@@ -1814,11 +1814,15 @@ components:
           type: integer
         athlete1WazaAri:
           type: integer
+        athlete1Yuko:
+          type: integer
         athlete1Shido:
           type: integer
         athlete2Ippon:
           type: integer
         athlete2WazaAri:
+          type: integer
+        athlete2Yuko:
           type: integer
         athlete2Shido:
           type: integer
@@ -1843,9 +1847,11 @@ components:
         - categoryId
         - athlete1Ippon
         - athlete1WazaAri
+        - athlete1Yuko
         - athlete1Shido
         - athlete2Ippon
         - athlete2WazaAri
+        - athlete2Yuko
         - athlete2Shido
         - status
 
@@ -2007,10 +2013,14 @@ components:
           type: ["string", "null"]
         role:
           type: string
-          enum: [super_admin, club_admin, coach, athlete, parent]
+          enum: [super_admin, club_admin, coach, athlete, parent, pending]
         clubId:
           type: ["integer", "null"]
         clubName:
+          type: ["string", "null"]
+        parentId:
+          type: ["integer", "null"]
+        parentName:
           type: ["string", "null"]
         createdAt:
           type: string
@@ -2026,8 +2036,10 @@ components:
       properties:
         role:
           type: string
-          enum: [super_admin, club_admin, coach, athlete, parent]
+          enum: [super_admin, club_admin, coach, athlete, parent, pending]
         clubId:
+          type: ["integer", "null"]
+        parentId:
           type: ["integer", "null"]
 
     CreateUserInput:
@@ -2043,7 +2055,7 @@ components:
           type: string
         role:
           type: string
-          enum: [super_admin, club_admin, coach, athlete, parent]
+          enum: [super_admin, club_admin, coach, athlete, parent, pending]
         clubId:
           type: ["integer", "null"]
       required:
@@ -2092,7 +2104,7 @@ components:
           type: integer
         eventType:
           type: string
-          enum: [ippon, waza_ari, shido, hansoku]
+          enum: [ippon, waza_ari, yuko, shido, hansoku]
         timestampSeconds:
           type: integer
         createdAt:
@@ -2112,7 +2124,7 @@ components:
           type: integer
         eventType:
           type: string
-          enum: [ippon, waza_ari, shido, hansoku]
+          enum: [ippon, waza_ari, yuko, shido, hansoku]
         timestampSeconds:
           type: integer
       required:
